RESOLVED FIXED286576
[WebGPU] WebKit incorrectly reports support for dual source blending
https://bugs.webkit.org/show_bug.cgi?id=286576
Summary [WebGPU] WebKit incorrectly reports support for dual source blending
Mike Wyrzykowski
Reported 2025-01-27 10:03:22 PST
[WebGPU] WebKit incorrectly reports support for dual source blending
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-27 10:06:33 PST
Mike Wyrzykowski
Comment 2 2025-01-27 10:40:55 PST
EWS
Comment 3 2025-01-30 10:00:23 PST
Committed 289562@main (900770a2fa5d): <https://commits.webkit.org/289562@main> Reviewed commits have been landed. Closing PR #39596 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.