[WebGPU] WebKit incorrectly reports support for dual source blending https://bugs.webkit.org/show_bug.cgi?id=286576 rdar://143703003

Reviewed by Tadeu Zagallo.

WebGPU was incorrectly reporting dual source blending support,
so remove it.

Also fix float32 blendable implementation which reported false
for all 32-bit floating point formats.

Thank you Tuomas for noticing, patch is his suggestions.

* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::baseFeatures):
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::supportsBlending):

Canonical link: https://commits.webkit.org/289562@main